extends Control

const CellScene = preload("res://scenes/cell.tscn")

# --- –ù–∞—Å—Ç—Ä–æ–π–∫–∏ –ø–æ–ª—è ---
var rows: int = 9
var cols: int = 9
var mine_count: int = 10

# --- –°–æ—Å—Ç–æ—è–Ω–∏–µ –∏–≥—Ä—ã ---
var field: Array = []        # 2D: -1 = –º–∏–Ω–∞, 0..8 = —á–∏—Å–ª–æ —Å–æ—Å–µ–¥–Ω–∏—Ö –º–∏–Ω
var revealed: Array = []     # 2D: bool
var flagged: Array = []      # 2D: bool
var game_started: bool = false
var game_over: bool = false
var elapsed_time: int = 0
var flags_placed: int = 0
var cells_revealed: int = 0

# --- –¢–∞—á ---
var long_press_time: float = 0.4
var chord_press_time: float = 1.2
var press_start_time: float = -1.0
var press_cell: Vector2i = Vector2i(-1, -1)
var press_handled: bool = false

# --- –£–∑–ª—ã ---
@onready var grid: GridContainer = $FieldContainer/Field
@onready var mine_counter: LCDDisplay = $TopPanel/MineCounter
@onready var timer_label: LCDDisplay = $TopPanel/TimerLabel
@onready var face_button: Button = $TopPanel/FaceButton
@onready var game_timer: Timer = $GameTimer
@onready var difficulty_panel: VBoxContainer = $DifficultyPanel

# --- –†–∞–∑–º–µ—Ä—ã –∫–ª–µ—Ç–æ–∫ ---
var cell_size: int = 40

# --- –¶–≤–µ—Ç–∞ —Ü–∏—Ñ—Ä (–∫–∞–∫ –≤ XP) ---
var number_colors = {
	1: Color(0, 0, 1),        # —Å–∏–Ω–∏–π
	2: Color(0, 0.5, 0),      # –∑–µ–ª—ë–Ω—ã–π
	3: Color(1, 0, 0),        # –∫—Ä–∞—Å–Ω—ã–π
	4: Color(0, 0, 0.5),      # —Ç—ë–º–Ω–æ-—Å–∏–Ω–∏–π
	5: Color(0.5, 0, 0),      # —Ç—ë–º–Ω–æ-–∫—Ä–∞—Å–Ω—ã–π
	6: Color(0, 0.5, 0.5),    # –±–∏—Ä—é–∑–æ–≤—ã–π
	7: Color(0, 0, 0),        # —á—ë—Ä–Ω—ã–π
	8: Color(0.5, 0.5, 0.5),  # —Å–µ—Ä—ã–π
}

func _ready():
	face_button.pressed.connect(_on_face_pressed)
	game_timer.timeout.connect(_on_timer_timeout)
	$DifficultyPanel/EasyBtn.pressed.connect(func(): _start_game(9, 9, 10))
	$DifficultyPanel/MediumBtn.pressed.connect(func(): _start_game(16, 16, 40))
	$DifficultyPanel/HardBtn.pressed.connect(func(): _start_game(16, 30, 99))
	_show_difficulty_menu()

func _show_difficulty_menu():
	difficulty_panel.visible = true
	grid.visible = false
	$TopPanel.visible = false

func _start_game(c: int, r: int, m: int):
	cols = c
	rows = r
	mine_count = m
	difficulty_panel.visible = false
	grid.visible = true
	$TopPanel.visible = true
	_new_game()

func _new_game():
	game_started = false
	game_over = false
	elapsed_time = 0
	flags_placed = 0
	cells_revealed = 0
	press_start_time = -1.0
	game_timer.stop()
	
	_update_mine_counter()
	_update_timer()
	face_button.text = "üôÇ"
	
	# –†–∞—Å—á—ë—Ç —Ä–∞–∑–º–µ—Ä–∞ –∫–ª–µ—Ç–∫–∏
	var available_width = 440 - 20  # –æ—Ç—Å—Ç—É–ø—ã
	var available_height = 980 - 130  # –≤–µ—Ä—Ö–Ω—è—è –ø–∞–Ω–µ–ª—å + –æ—Ç—Å—Ç—É–ø—ã
	var cw = available_width / cols
	var ch = available_height / rows
	cell_size = int(min(cw, ch))
	if cell_size < 24:
		cell_size = 24
	
	# –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –º–∞—Å—Å–∏–≤–æ–≤
	field.clear()
	revealed.clear()
	flagged.clear()
	for r in rows:
		field.append([])
		revealed.append([])
		flagged.append([])
		for c in cols:
			field[r].append(0)
			revealed[r].append(false)
			flagged[r].append(false)
	
	_build_grid()

func _build_grid():
	# –û—á–∏—Å—Ç–∫–∞
	for child in grid.get_children():
		child.queue_free()
	
	grid.columns = cols
	
	for r in rows:
		for c in cols:
			var cell = CellScene.instantiate() as MineCell
			cell.setup(r, c, cell_size)
			grid.add_child(cell)

func _place_mines(first_r: int, first_c: int):
	# –†–∞—Å—Å—Ç–∞–≤–ª—è–µ–º –º–∏–Ω—ã, –∏–∑–±–µ–≥–∞—è –ø–µ—Ä–≤–æ–≥–æ –∫–ª–∏–∫–∞ –∏ –µ–≥–æ —Å–æ—Å–µ–¥–µ–π
	var safe = []
	for dr in range(-1, 2):
		for dc in range(-1, 2):
			safe.append(Vector2i(first_c + dc, first_r + dr))
	
	var placed = 0
	while placed < mine_count:
		var r = randi() % rows
		var c = randi() % cols
		if Vector2i(c, r) in safe:
			continue
		if field[r][c] == -1:
			continue
		field[r][c] = -1
		placed += 1
	
	# –°—á–∏—Ç–∞–µ–º —á–∏—Å–ª–∞
	for r in rows:
		for c in cols:
			if field[r][c] == -1:
				continue
			var count = 0
			for dr in range(-1, 2):
				for dc in range(-1, 2):
					var nr = r + dr
					var nc = c + dc
					if nr >= 0 and nr < rows and nc >= 0 and nc < cols:
						if field[nr][nc] == -1:
							count += 1
			field[r][c] = count

func _input(event):
	if game_over:
		return
	
	if event is InputEventScreenTouch or event is InputEventMouseButton:
		var is_press = false
		var is_release = false
		var is_double = false
		var pos = Vector2.ZERO
		
		if event is InputEventScreenTouch:
			is_press = event.pressed
			is_release = !event.pressed
			is_double = event.double_tap if event is InputEventScreenTouch else false
			pos = event.position
		elif event is InputEventMouseButton and event.button_index == MOUSE_BUTTON_LEFT:
			is_press = event.pressed
			is_release = !event.pressed
			is_double = event.double_click
			pos = event.position
		elif event is InputEventMouseButton and event.button_index == MOUSE_BUTTON_RIGHT:
			if event.pressed:
				var rc = _get_cell_at(event.position)
				if rc.x >= 0:
					_toggle_flag(rc.y, rc.x)
			return
		else:
			return
		
		var cell_info = _get_cell_at(pos)
		if cell_info.x < 0:
			return
		
		# –î–≤–æ–π–Ω–æ–π –∫–ª–∏–∫/—Ç–∞–ø ‚Äî chord reveal (–æ—Ç–∫—Ä—ã—Ç—å —Å–æ—Å–µ–¥–Ω–∏–µ –∫–ª–µ—Ç–∫–∏)
		if is_press and is_double:
			_chord_reveal(cell_info.y, cell_info.x)
			press_handled = true
			return
		
		if is_press:
			press_start_time = Time.get_ticks_msec() / 1000.0
			press_cell = cell_info
			press_handled = false
		elif is_release and !press_handled:
			if cell_info == press_cell:
				var hold_time = Time.get_ticks_msec() / 1000.0 - press_start_time
				if hold_time >= long_press_time:
					_toggle_flag(cell_info.y, cell_info.x)
					if OS.has_feature("mobile"):
						Input.vibrate_handheld(50)
				else:
					_reveal_cell(cell_info.y, cell_info.x)
			press_start_time = -1.0

func _process(delta):
	if press_start_time > 0 and !press_handled and !game_over:
		var hold_time = Time.get_ticks_msec() / 1000.0 - press_start_time
		if hold_time >= long_press_time:
			# –î–æ–ª–≥–∏–π —Ç–∞–ø ‚Äî —Ñ–ª–∞–≥
			if press_cell.x >= 0:
				_toggle_flag(press_cell.y, press_cell.x)
				press_handled = true
				if OS.has_feature("mobile"):
					Input.vibrate_handheld(50)

func _get_cell_at(pos: Vector2) -> Vector2i:
	for child in grid.get_children():
		if child is MineCell:
			var rect = child.get_global_rect()
			if rect.has_point(pos):
				return Vector2i(child.col, child.row)
	return Vector2i(-1, -1)

func _reveal_cell(r: int, c: int):
	if r < 0 or r >= rows or c < 0 or c >= cols:
		return
	if revealed[r][c] or flagged[r][c]:
		return
	
	if !game_started:
		game_started = true
		_place_mines(r, c)
		game_timer.start()
	
	revealed[r][c] = true
	cells_revealed += 1
	
	if field[r][c] == -1:
		# –ú–∏–Ω–∞ ‚Äî –ø—Ä–æ–∏–≥—Ä—ã—à
		_game_lost(r, c)
		return
	
	_update_cell_visual(r, c)
	
	# –ï—Å–ª–∏ –ø—É—Å—Ç–∞—è ‚Äî —Ä–∞—Å–∫—Ä—ã–≤–∞–µ–º —Å–æ—Å–µ–¥–µ–π
	if field[r][c] == 0:
		for dr in range(-1, 2):
			for dc in range(-1, 2):
				if dr == 0 and dc == 0:
					continue
				_reveal_cell(r + dr, c + dc)
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–æ–±–µ–¥—É
	if cells_revealed == rows * cols - mine_count:
		_game_won()

func _chord_reveal(r: int, c: int):
	# –ï—Å–ª–∏ –∫–ª–µ—Ç–∫–∞ –æ—Ç–∫—Ä—ã—Ç–∞ –∏ —á–∏—Å–ª–æ —Å–æ–≤–ø–∞–¥–∞–µ—Ç —Å –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ–º —Ñ–ª–∞–≥–æ–≤ –≤–æ–∫—Ä—É–≥ ‚Äî –æ—Ç–∫—Ä—ã—Ç—å —Å–æ—Å–µ–¥–µ–π
	# –ï—Å–ª–∏ –∫–ª–µ—Ç–∫–∞ –∑–∞–∫—Ä—ã—Ç–∞ ‚Äî –ø—Ä–æ—Å—Ç–æ –æ—Ç–∫—Ä—ã—Ç—å –≤—Å–µ —Å–æ—Å–µ–¥–Ω–∏–µ –∑–∞–∫—Ä—ã—Ç—ã–µ –∫–ª–µ—Ç–∫–∏
	if revealed[r][c]:
		# –ö–ª–∞—Å—Å–∏—á–µ—Å–∫–∏–π chord: —Å—á–∏—Ç–∞–µ–º —Ñ–ª–∞–≥–∏ –≤–æ–∫—Ä—É–≥
		var flag_count = 0
		for dr in range(-1, 2):
			for dc in range(-1, 2):
				var nr = r + dr
				var nc = c + dc
				if nr >= 0 and nr < rows and nc >= 0 and nc < cols:
					if flagged[nr][nc]:
						flag_count += 1
		# –ï—Å–ª–∏ —Ñ–ª–∞–≥–æ–≤ = —á–∏—Å–ª—É –Ω–∞ –∫–ª–µ—Ç–∫–µ, –æ—Ç–∫—Ä—ã–≤–∞–µ–º –≤—Å–µ –Ω–µ—Ñ–ª–∞–≥–æ–≤–∞–Ω–Ω—ã–µ —Å–æ—Å–µ–¥–Ω–∏–µ
		if flag_count == field[r][c]:
			for dr in range(-1, 2):
				for dc in range(-1, 2):
					var nr = r + dr
					var nc = c + dc
					if nr >= 0 and nr < rows and nc >= 0 and nc < cols:
						if !revealed[nr][nc] and !flagged[nr][nc]:
							_reveal_cell(nr, nc)
	else:
		# –ö–ª–µ—Ç–∫–∞ –∑–∞–∫—Ä—ã—Ç–∞ ‚Äî –æ—Ç–∫—Ä—ã–≤–∞–µ–º –≤—Å–µ —Å–æ—Å–µ–¥–Ω–∏–µ –Ω–µ—Ñ–ª–∞–≥–æ–≤–∞–Ω–Ω—ã–µ
		for dr in range(-1, 2):
			for dc in range(-1, 2):
				var nr = r + dr
				var nc = c + dc
				if nr >= 0 and nr < rows and nc >= 0 and nc < cols:
					if !revealed[nr][nc] and !flagged[nr][nc]:
						_reveal_cell(nr, nc)

func _toggle_flag(r: int, c: int):
	if revealed[r][c]:
		return
	
	flagged[r][c] = !flagged[r][c]
	if flagged[r][c]:
		flags_placed += 1
	else:
		flags_placed -= 1
	
	_update_cell_visual(r, c)
	_update_mine_counter()

func _update_cell_visual(r: int, c: int):
	var idx = r * cols + c
	if idx >= grid.get_child_count():
		return
	var cell: MineCell = grid.get_child(idx)
	
	if revealed[r][c]:
		var style = StyleBoxFlat.new()
		style.bg_color = Color(0.78, 0.78, 0.78)
		style.border_width_top = 1
		style.border_width_left = 1
		style.border_color = Color(0.5, 0.5, 0.5)
		var shadow_style = StyleBoxFlat.new()
		shadow_style.bg_color = Color(0, 0, 0, 0)
		cell.set_revealed_style(style, shadow_style)
		
		var val = field[r][c]
		if val > 0:
			cell.show_number(val, number_colors.get(val, Color.BLACK))
		elif val == -1:
			cell.show_mine()
		else:
			cell.show_empty()
	elif flagged[r][c]:
		cell.show_flag()
	else:
		cell.show_closed()

func _game_lost(hit_r: int, hit_c: int):
	game_over = true
	game_timer.stop()
	face_button.text = "üòµ"
	
	# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º –≤—Å–µ –º–∏–Ω—ã
	for r in rows:
		for c in cols:
			if field[r][c] == -1:
				revealed[r][c] = true
				_update_cell_visual(r, c)
	
	# –ü–æ–¥—Å–≤–µ—Ç–∏—Ç—å –∫–ª–µ—Ç–∫—É, –Ω–∞ –∫–æ—Ç–æ—Ä—É—é –Ω–∞—Å—Ç—É–ø–∏–ª–∏
	var idx = hit_r * cols + hit_c
	if idx < grid.get_child_count():
		var cell: MineCell = grid.get_child(idx)
		var style = StyleBoxFlat.new()
		style.bg_color = Color(1, 0, 0)
		cell.set_hit_style(style)

func _game_won():
	game_over = true
	game_timer.stop()
	face_button.text = "üòé"
	
	# –û—Ç–º–µ—á–∞–µ–º –æ—Å—Ç–∞–≤—à–∏–µ—Å—è –º–∏–Ω—ã —Ñ–ª–∞–≥–∞–º–∏
	for r in rows:
		for c in cols:
			if field[r][c] == -1 and !flagged[r][c]:
				flagged[r][c] = true
				flags_placed += 1
				_update_cell_visual(r, c)
	_update_mine_counter()

func _on_face_pressed():
	if game_over:
		_new_game()
	else:
		_show_difficulty_menu()

func _on_timer_timeout():
	elapsed_time += 1
	_update_timer()

func _update_mine_counter():
	var remaining = mine_count - flags_placed
	mine_counter.set_value(remaining)

func _update_timer():
	timer_label.set_value(min(elapsed_time, 999))
